[tool.poetry]
name = "coin-data"
version = "0.1.0"
description = ""
authors = ["Hju Kneyck Flores <hjucode@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.38"
websockets = "^14.2"
streamlit = "^1.42.0"
polars = "^1.22.0"
streamlit-autorefresh = "^1.0.1"
python-dotenv = "^1.0.1"
python-socks = "^2.7.1"
litestar = {extras = ["picologging", "standard"], version = "^2.14.0"}
python-socketio = "^5.12.1"
aiohttp = "^3.11.13"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
